# bourdon

./: .gitignore  BourdonButton.qml  BourdonForm.qml  BourdonForm.ui.qml  BourdonVolume.qml  CMakeLists.txt  CREDITS  FileDialogMobile.qml  FileDialogiOS.qml  LockForm.qml  MixerForm.qml  PresetForm.qml  PresetForm.ui.qml  README.md  bourdon-app.pro  bourdon.csd  bourdon.qmlproject.qtds  csengine.cpp  csengine.h  csoundproxy.h  csoundproxy.mm  fileio.cpp  fileio.h  ios-screen.h  languagemanager.cpp  languagemanager.h  main.cpp  main.qml  mediabuttonhandler-ios.h  mediabuttonhandler-ios.mm  mediabuttonhandler.cpp  mediabuttonhandler.h  privacy_policy.MD  qml.qrc  qtquickcontrols2.conf  resyntehesis-test.csd  test-ogg-samples.csd
android/: AndroidManifest.xml  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/res/values/: ic_launcher_background.xml
android/src/: MediaSessionHandler.java
bluetooth/: characteristicinfo.cpp  characteristicinfo.h  device.cpp  device.h  deviceinfo.cpp  deviceinfo.h  serviceinfo.cpp  serviceinfo.h
images/: bourdon.icns
ios/: Info.plist  LaunchScreen.storyboard
translations/: bourdon_et.qm  bourdon_et.ts  bourdon_ga.qm  bourdon_ga.ts  bourdon_gd.qm  bourdon_gd.ts
